--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ after_success:
   - docker push joseandrade2/multi-worker
 
 deploy:
+  edge: true
   provider: elasticbeanstalk
   region: us-east-1
   app: multi-docker
